<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/dialog_round"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="10dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titlePage"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:padding="5dp"
            android:textColor="@color/newColorText"
            android:textStyle="bold"
            android:text="@string/info_alert_sade_buttons_title" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/newColorText"
                android:textStyle="normal"
                android:text="@string/button_sades_fn_work"
                android:padding="5dp"
                android:layout_marginEnd="15dp"
                android:textSize="12sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/id_info_alert_sade_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titlePage"
        android:textColor="@color/newColorText"
        android:textStyle="normal"
        android:layout_marginTop="10dp"
        android:text="@string/info_alert_sade_buttons_timer"
        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_info_alert_sade_buttons"
        android:id="@+id/labelCheckbox"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp" >
        <TextView
            android:id="@+id/textShowAlertSadeButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/newColorElement"
            android:textSize="12sp"
            android:layout_alignBaseline="@+id/showAlertSadeButtons"
            android:text="@string/info_alert_sade_buttons_disable"
            android:layout_alignParentStart="true"/>
        <CheckBox
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-5dp"
            android:contentDescription="@string/yes_no"
            android:layout_toEndOf="@+id/textShowAlertSadeButtons"
            android:id="@+id/showAlertSadeButtons"/>
    </RelativeLayout>

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_cancel"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@id/buttonNext"
        android:contentDescription="@string/text_button_cancel"
        android:textColor="@color/newColorText"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:background="@color/newColorBgDark"
        />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelCheckbox"
        android:layout_toStartOf="@+id/buttonCancel"
        android:text="@string/button_next_info_page_edit"
        android:contentDescription="@string/button_next_info_page_edit"
        android:textColor="@color/newColorText"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        android:background="@color/newColorBgDark"
        />

</RelativeLayout>